# wrist-controller-app

./: CMakeLists.txt  README.md  bluetooth_handlers.c  bluetooth_handlers.h  connect  gesture_handlers.c  gesture_handlers.h  runner.c  utils.c  utils.h
arduino/gyro_runner/: gyro_runner.ino
arduino/runner/: runner.ino
data/: IndexMagData.csv  MagneticPinkyTraining.csv  MagneticThumbTraining.csv  PinkyMagData.csv  PreliminaryIndexData.csv  PreliminaryTestData.csv  PreliminaryThumbDataSet.csv  PreliminaryTrainingData.csv  csvParse.c  csvParse.h  testData.csv  testLetterData.csv  trainingData.csv  trainingLetterData.csv
ml_lib/: Makefile  csvParse.c  csvParse.h  knn.c  knn.h  mlrunner.c  trainingData.txt
new_data/: .~lock.index_finger.ods#  .~lock.index_training_data.csv#  .~lock.new_training_data.csv#  data_4_4_18.csv  data_4_6_18.csv  index_finger.ods  index_training_data.csv  new_training_data.csv
