cmake_minimum_required (VERSION 2.6)
project (wrist-controller-app)
include_directories("${PROJECT_SOURCE_DIR}")
add_executable(wrist-controller-app gesture_handlers.c gesture_handlers.h bluetooth_handlers.c bluetooth_handlers.h runner.c)
find_package(bluetooth)
target_link_libraries(wrist-controller-app bluetooth)